--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=540 height=864 style="width: 540px; height: 864px; background: #231F20"></canvas>
-    <script src="Build/htdocs.loader.js"></script>
+    <script src="Build/build.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/htdocs.data",
-        frameworkUrl: "Build/htdocs.framework.js",
-        codeUrl: "Build/htdocs.wasm",
+        dataUrl: "Build/build.data",
+        frameworkUrl: "Build/build.framework.js",
+        codeUrl: "Build/build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "InteriorDesign",
